[project]
name = "cmpe255-finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn>=0.8.0",
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "torch>=2.7.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]
